# Renderer_OpenGL

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  imgui.ini  make_build.sh
include/: CMakeLists.txt  EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  layout.h  renderer.cpp  renderer.h  shaderClass.cpp  shaderClass.h  texture.cpp  texture.h
include/resources/shaders/: basic1.shader
include/resources/shaders/shapes/: frag.shader
math/: CMakeLists.txt  dot.cpp  matrices.cpp
src/: CMakeLists.txt  shapes.cpp
tests/shapes/: CMakeLists.txt  camera.cpp  camera.h  color.cpp  color.h  lighting.cpp  lighting.h  menu.cpp  menu.h  shapes.h  triangles.cpp  triangles.h
tests/shapes/resources/shaders/: basic.shader  basic1.shader  f1.shader  v1.shader
tests/shapes/resources/shaders/shapes/: vert.shader
tests/tests/: CMakeLists.txt  test.cpp  test.h  testClearColor.cpp  testClearColor.h  testTextBox.cpp  testTextBox.h  testTexture.cpp  testTexture.h
